@@ -154,7 +154,7 @@
         customizerPane.addCustomizer(checkBoxCustomizer, new AbsoluteTableConstraints(30, 160,  250, 20, checkBoxCustomizer, itl));
         // create a JButtonCustomizer to customize a JRadioButton
         JButtonCustomizer radioButtonCustomizer = new JButtonCustomizer(new JRadioButton("Double click to edit this radio button!", true));
-        // set the background color to white
+       // set the background color to white
         radioButtonCustomizer.setBackground(Color.WHITE);
         // add it to the JCustomizerPane
         customizerPane.addCustomizer(radioButtonCustomizer, new AbsoluteTableConstraints(300, 200,  270, 20, radioButtonCustomizer, itl));
